# mongoreader

./: .gitignore  .gitlab-ci.yml  LNstatusReport.py  changelog.md  errors.py  gogglesFunctions.py  pyproject.toml  wafers.py
demo/: DatasheetDashboardCSV.ipynb
docs/: conf.py  index.rst
docs/FullApi/: fullApi.rst  plottingAPI.rst
docs/GeneralTopics/: generalTopics.rst
docs/Tutorials/: waferCollation.ipynb
docs/_templates/: classsplitinheritance.rst  classwithmethods.rst  fullautoclass.rst  module.rst
mongoreader/: MMSconnector.py  __init__.py  connectors.py  connectors_old.py  core.py  datasheets.py  gogglesFunctions.py  modules.py  wafers.py
mongoreader/connectors/: CordobaGenerator.py  MMSconnector.py  MMSconnectors_benchConfig.py  ModuleGenerator.py  Untitled-1.ipynb  conversions.py  goldenSampleConnector.py
mongoreader/plotting/: colors.py  waferPlotting.py
mongoreader/plotting/rawdata/: BilbaoCoordinates.csv  BilbaoCoordinates.json  BudapestCoordinates.csv  BudapestCoordinates.json  BudapestCoordinates_centers.json
plotting/: colors.py  patches.py  tests.py  tests2.py  waferPlotting.py  waferSizes.json
plotting/rawdata/: BilbaoParser.py  BudapestCoordinates.json  BudapestParser.py  BudapestParser2.py
plottingScripts/: waferPlottingScripts.py
scripts_drafts/: tests.py  tests2.py
tests/: test_dotOutGeneration.py
